# milli-quic

./: .gitignore  Cargo.toml  DESIGN.md
docs/: memory-reduction.md
examples/: alt_svc_server.py  gen_cert.sh  h2_client.rs  h2_server.rs  h2_tls_client.rs  h2_tls_server.rs  h3_client.rs  h3_server.rs  http1_client.rs  http1_server.rs  https1_client.rs  https1_server.rs  multi_server.rs  omni_client.rs  run_demo.sh
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_frame_decode.rs  fuzz_h3_frame.rs  fuzz_packet_header.rs  fuzz_qpack.rs  fuzz_tls_messages.rs  fuzz_varint.rs
src/: buf.rs  error.rs  h2_tls.rs  https1.rs  lib.rs  transport.rs  varint.rs
src/connection/: handshake_pool.rs  io.rs  keys.rs  mod.rs  recv.rs  transmit.rs
src/crypto/: aead.rs  ecdsa_p256.rs  ed25519.rs  header_protection.rs  hkdf.rs  key_schedule.rs  mod.rs  rustcrypto.rs
src/discovery/: alt_svc.rs  mod.rs
src/frame/: mod.rs
src/h2/: client.rs  connection.rs  flow_control.rs  frame.rs  io.rs  mod.rs  server.rs  stream.rs
src/h3/: client.rs  connection.rs  frame.rs  mod.rs  server.rs
src/h3/qpack/: huffman.rs  integer.rs  mod.rs  static_table.rs
src/hpack/: codec.rs  huffman.rs  integer.rs  mod.rs  static_table.rs
src/http/: header.rs  method.rs  mod.rs  status.rs
src/http1/: client.rs  connection.rs  io.rs  mod.rs  parse.rs  server.rs
src/packet/: coalesce.rs  decode_dcid.rs  long_header.rs  mod.rs  number.rs  short_header.rs
src/tcp_tls/: client.rs  connection.rs  io.rs  mod.rs  record.rs  server.rs
src/tls/: alert.rs  extensions.rs  handshake.rs  key_schedule_tls.rs  messages.rs  mod.rs  transcript.rs  transport_params.rs
src/transport/: congestion.rs  flow_control.rs  loss.rs  mod.rs  recovery.rs  stream.rs
tests/: curl_interop.sh  h2_integration.rs  h3_integration.rs  http1_integration.rs  integration.rs  memory_budget.rs
