[package]
name = "milli-quic"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A no_std QUIC + HTTP/3 implementation for embedded systems"

[features]
default = ["quic", "h3", "rustcrypto-chacha"]
quic = []
h3 = ["quic"]
alloc = []
rustcrypto-chacha = ["quic", "dep:chacha20poly1305", "dep:chacha20", "dep:aes-gcm", "dep:aes", "dep:hkdf", "dep:sha2", "dep:hmac"]
rustcrypto-aes = ["quic", "dep:aes-gcm", "dep:aes", "dep:hkdf", "dep:sha2", "dep:hmac"]
discovery = []

[dependencies]
heapless = "0.8"

# RustCrypto - all no_std compatible
chacha20poly1305 = { version = "0.10", default-features = false, optional = true }
chacha20 = { version = "0.9", default-features = false, optional = true }
aes-gcm = { version = "0.10", default-features = false, features = ["aes"], optional = true }
aes = { version = "0.8", default-features = false, optional = true }
hkdf = { version = "0.12", default-features = false, optional = true }
sha2 = { version = "0.10", default-features = false, optional = true }
hmac = { version = "0.12", default-features = false, optional = true }

[dev-dependencies]
hex-literal = "0.4"
