[package]
name = "milli-http"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A no_std HTTP/1.1, HTTP/2, HTTP/3 + QUIC implementation for embedded systems"

[features]
default = ["quic", "h3", "rustcrypto-chacha"]
quic = []
http = []
h2 = ["http"]
h3 = ["quic", "http"]
alloc = []
std = []
rustcrypto-chacha = ["quic", "dep:chacha20poly1305", "dep:chacha20", "dep:aes-gcm", "dep:aes", "dep:hkdf", "dep:hmac"]
rustcrypto-aes = ["quic", "dep:aes-gcm", "dep:aes", "dep:hkdf", "dep:hmac"]
discovery = []

[dependencies]
heapless = "0.8"
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"] }
ed25519-dalek = { version = "2", default-features = false }
p256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
sha2 = { version = "0.10", default-features = false }

# RustCrypto - all no_std compatible
chacha20poly1305 = { version = "0.10", default-features = false, optional = true }
chacha20 = { version = "0.9", default-features = false, optional = true }
aes-gcm = { version = "0.10", default-features = false, features = ["aes"], optional = true }
aes = { version = "0.8", default-features = false, optional = true }
hkdf = { version = "0.12", default-features = false, optional = true }
hmac = { version = "0.12", default-features = false, optional = true }

[dev-dependencies]
hex-literal = "0.4"
rand = "0.9"

[[example]]
name = "h3_server"
required-features = ["h3", "rustcrypto-chacha"]

[[example]]
name = "h3_client"
required-features = ["h3", "rustcrypto-chacha"]

[[example]]
name = "h2_server"
required-features = ["h2"]

[[example]]
name = "h2_client"
required-features = ["h2"]

[[example]]
name = "http1_server"

[[example]]
name = "http1_client"

[[example]]
name = "multi_server"
required-features = ["h3", "h2", "rustcrypto-chacha"]

[[example]]
name = "omni_client"
required-features = ["h3", "h2", "rustcrypto-chacha"]
